--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
+    "fast-levenshtein": "^3.0.0",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
     "highlight.js": "^11.8.0",
@@ -40,6 +41,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "js-audio-recorder": "^1.0.7",
+    "js-levenshtein": "^1.1.6",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
